fixed bug with spacing of squares not adding up

--- a/Etch.css
+++ b/Etch.css
@@ -1,3 +1,10 @@
+* {
+    box-sizing: border-box;
+  }
+  
+  
+
+
 #sketchBox{
     display: grid;
     margin: auto;
@@ -8,7 +15,6 @@
     height: 600px;
     width: 960px;
     background-color: white;
-
 }
 
 #buttons{
